The bug: $ echo x | awk '/[[:cntrl:]]/' x

The NUL character in cntrl class truncates the pattern, and an empty
pattern matches anything. The patch skips NUL as a quick fix.

PR:     195792
Submitted by:   kdrakehp@zoho.com
Approved by:    bwk@cs.princeton.edu (the author)
MFC after:      3 days

Former-commit-id: ac6159f6ccc186159d1f53f48a6c68d2df714843